--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
 	     </div>
 		<div class="row">
         <div class="col-sm-12 col-lg-8">	  
-MARIA EDUARDA PINEZI DIRETORA DE MARKETING CMO- Responsável pelo marketing vai explicar o tom da sua companhia, encontrar a base de cliente e construir em cima disso, o trabalho ainda deve ser humano e de conexão com o cliente.</p>
+ <p class="teste">MARIA EDUARDA PINEZI DIRETORA DE MARKETING CMO- Responsável pelo marketing vai explicar o tom da sua companhia, encontrar a base de cliente e construir em cima disso, o trabalho ainda deve ser humano e de conexão com o cliente.</p>
 </div>
 		</div>
 		<div class="row">
         <div class="col-sm-12 col-lg-8">
-ANA CLARA DIRETORA DE OPERAÇÕES COO- Responsável por auxiliar o CEO e sua função é garantir a produtividade e a gestão adequada dos recursos da empresa.</p>
+ <p class="teste">ANA CLARA DIRETORA DE OPERAÇÕES COO- Responsável por auxiliar o CEO e sua função é garantir a produtividade e a gestão adequada dos recursos da empresa.</p>
 		</div>
 
 	    </div>
 		<div class="row">
         <div class="col-sm-12 col-lg-8">
-LUCCA FRACASSI DIRETOR EXECUTIVO CEO- Responsável por realizar a gestão da empresa, comandando todas as organizações incluindo resolver e tomar decisões importantes.</p>
+ <p class="teste">LUCCA FRACASSI DIRETOR EXECUTIVO CEO- Responsável por realizar a gestão da empresa, comandando todas as organizações incluindo resolver e tomar decisões importantes.</p>
 </div>
 	 </div>
 		<div class="row">
         <div class="col-sm-12 col-lg-8">
-CAROLINE DIRETORA-CHEFE DE TECNOLOGIA CTO- Responsável por gerenciar todas as ações relacionadas à infraestrutura tecnológica da empresa.</p>
+ <p class="teste">CAROLINE DIRETORA-CHEFE DE TECNOLOGIA CTO- Responsável por gerenciar todas as ações relacionadas à infraestrutura tecnológica da empresa.</p>
         </div>
         
       
