--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
       <div class="row">
 	      <div class="col-sm-12 col-lg-8">
 	 <img src="CSS/Mirror mirror on the wall.jpeg" class="img-fluid" alt="Logo da empresa">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.173418805857!2d-46.68112498585204!3d-23.526264285120835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce57e2bc640173%3A0x781d8851e4b1d41e!2sBourbon%20Shopping%20S%C3%A3o%20Paulo!5e0!3m2!1spt-BR!2sbr!4v1628084832955!5m2!1spt-BR!2sbr" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+         <img src="CSS/Espelho.jpeg" class="img-fluid" alt="Desing do projeto">
+		<iframe src="https://www.google.com/maps/embed?pb=!4v1629811997358!6m8!1m7!1spmQWcKFCQw_85vfW2Uowbw!2m2!1d40.74902112929055!2d-73.98595477386812!3f164.8!4f0!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 	</div>
        </div>
      
